# klay

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: conf.py  index.rst  requirements.txt
experiments/: benchmark_scatter.py  compare_stratify.py  stratify.py  stratify_parallel.py
experiments/nesy/: run.py
experiments/results/: benchmark_report.tex  benchmark_results.json
experiments/visual_sudoku/: run.py
src/: circuit.cpp
src/klay/: __init__.py  utils.py
src/klay/backends/: torch_backend.py
src/klay/backends/jax/: __init__.py
src/klay/backends/jax/semiring/: __init__.py  log.py  real.py
tests/: test_manual.py
